--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -90,25 +90,21 @@ SPLINT = $(top_builddir)/src/splint$(EXEEXT)
 ### This is horrible!  Can't we make top_builddir absolute?
 SPLINTNEST = ../$(top_builddir)/src/splint$(EXEEXT)
 
-SPLINTPNEST = @$(SPLINTNEST)
-SPLINTP = @$(SPLINT)
+SPLINTPNEST = @$(SPLINTNEST) -nof
+SPLINTP = @$(SPLINT) -nof
 
 # Make sure .splintrc files are not used so test results do not
 # depend on local settings.
-SPLINTRN = $(SPLINTP) -nof -hints -booltype "bool"
+SPLINTRN = $(SPLINTP) -hints -booltype "bool"
 SPLINTR = $(SPLINTRN) -exportlocal +debugfcnconstraint
 
-SPLINTRNNEST = $(SPLINTPNEST) -nof -hints -booltype "bool"
+SPLINTRNNEST = $(SPLINTPNEST) -hints -booltype "bool"
 SPLINTRNEST = $(SPLINTRNNEST) -exportlocal +debugfcnconstraint
 
 
 ###
-### !!! 
-### These tests have been temporarily removed because of problems with the new build process:
-###   fileio tainted mergestate metastate \
-###   tests2.2 tests2.2a tests2.4 tests2.5 
-###  
-###   maxset strchr for
+### rcfiles not included becuase file names will not match exactly
+###
 UNITTESTS = \
   help \
   fileio tainted mergestate metastate sizeof buffertest \
@@ -122,10 +118,10 @@ UNITTESTS = \
   funcpointer glob globals impabstract init inparam internal iter keep libs \
   linked lintcomments list macros macrosef merge mergenull modifies modtest moduncon \
   mongoincludes mystrncat noeffect null observer oldstyle outglob outparam \
-  postnotnull preds prefixes printflike rc rcfiles refcounts release repexpose \
+  postnotnull preds prefixes printflike rc refcounts release repexpose \
   returned sharing slovaknames specclauses special stack staticarray strings \
   structassign typequals ud ulstypes union unreachable unsignedcompare \
-  unused ullint void
+  unused ullint utypes void
 
 UNITEXPECTS = $(addsuffix .expect, $(UNITTESTS))
 
@@ -907,8 +903,8 @@ version:
 
 .PHONY: help
 help:
-	-@$(SPLINTP)
-	-@LARCH_PATH=/dev/null; $(SPLINT) empty.lcl
+	-@$(SPLINT)
+	-@LARCH_PATH=/dev/null; $(SPLINT) -nof empty.lcl
 	-@$(SPLINTP) -help
 	-@$(SPLINTP) -asdf
 	-@$(SPLINTP) +boolint +boolint 
@@ -1536,6 +1532,16 @@ unused:
 ullint:
 	${SPLINTRN} ullint.c -expect 5
 	${SPLINTRN} ullint.c +charint +charintliteral -expect 2
+
+###
+### 2001-12-30: Poor warnings reported by Peter Deutsch
+###
+
+.PHONY: utypes
+utypes:
+	${SPLINTRN} utypes.c -expect 6
+
+###
 
 .PHONY: void
 void:
